# ralph-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.deepagents/: AGENTS.md
.deepagents/skills/ralph-mode/: SKILL.md
docs/: ARCHITECTURE_PLAN.md  STRUCTURE.md
initial_implementation/: README.md  __init__.py  agent_factory.py  main.py  ralph_loop.py
input/: README.md
ralph_minimal/: README.md  __init__.py  agent_factory_minimal.py  main_minimal.py
skills/: SKILL.md
src/: __init__.py  config.py  execution.py  state_manager.py  token_tracker.py  tools.py
